src/app/index.scss
/**
 *  Do not remove the comment below. It's the markers used by wiredep to inject
 *  sass dependencies when defined in the bower.json of your dependencies
 */
// bower:scss
// endbower

@import "vendor/sanitize.scss";

$logo-small: 16px;
$medium-image-height: 621px;
$col-width: 530px;
$font-brand: Montserrat;
$background-color: white;
$dark-background-color: #4c4c4c;
$primary-color: #d46049;
$title-letter-spacing: 1.3px;

html {
  font-family: $font-brand;
}

body {
  background-color: #fff;
  margin: 0;
  width: 100%;
  font-family: $font-brand;
}

.background-header {
  position: relative;
  width: 100%;
  height: 80vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

#header-home {
  background-image: url(../images/background.png);
}

#header-listings {
  background-image: url(../images/listings-bg.jpg);
  &:after {
  	display: block;
  	content: " ";
  	position: absolute;
  	bottom: 0;
  	left: 0;
  	height: 100px;
  	width: 100%;
  	background-image: linear-gradient(to bottom, rgba($dark-background-color, 0), rgba($dark-background-color, 1));
  }
}

#header-logo {
  max-height: 90%;
  max-width: 90%;
  position: absolute;
  top: 292px;
  left: 0;
  right: 0;
  margin: auto;
  height: 30px;
}

#header-text {
  max-height: 90%;
  max-width: 90%;
  position: absolute;
  top: 336px;
  width: 220px;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  font-family: $font-brand;
  color: #858585;
}

#header-text-listings {
	max-width: 90%;
  text-align: center;
  font-family: $font-brand;
  color: $background-color;
  font-size: 300%;
}

#content {
  position: absolute;
  top: 706px;
  width: 100%;
}

#item-top {
  margin-top: -442px;
  background-color: $background-color;
}

#container-listings {
  background-color: $dark-background-color;
}

#listings-sidebar {
  width: 33%;
  padding: 0 12px;
}

#listings-info {
  width: 66%;
  padding: 0 12px;
}

.menu-top {
  background-image: url(../images/listings-cta-bg.jpg);
  padding-top: 4px;
  padding-bottom: 14px;
}

.menu {
  background-color: $primary-color;
  padding-bottom: 12px;
  font-weight: lighter;
}

.sidebar-header {
  margin: 0;
  padding: 16px;
  padding-bottom: 10px;
  font-weight: lighter;
}

.light-line {
  border-style: solid;
  opacity: .9;
  width: 90%;
}

#listings-content {
	position: relative;
  margin-top: -350px;
}

.section-header {
  font-family: $font-brand;
  color: #b4b3b3;
  letter-spacing: 0.5px;
  color: #858585;
  font-size: 125%;
}

.col-content {
  font-family: $font-brand;
  color: #b4b3b3;
  letter-spacing: 0.5px;
  color: #858585;
}

.container {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 1800px;
  margin: 42px auto 0 auto;
  // align-content: center;
  // align-items: center;
}

.item {
  width: $col-width;
  margin: 16px;
}

.logo-small {
  height: $logo-small;
}

.image-medium {
  height: $medium-image-height;
  width: auto;
}

.logo-upper-left {
  position: absolute;
  top: 37px;
  left: 37px;
  height: 11px;
  z-index: 2;
}

.bond-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  > li {
    padding-left: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
    font-size: small;
    font-weight: lighter;
  }

  > hr {
    border-color: #c35440;
    opacity: .5;
    width: 90%;
    border-style: solid;
  }
}

.menu {
  color: $background-color;
  font-family: $font-brand;
  letter-spacing: $title-letter-spacing;
}

.cool-button {
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding: 8px;
  margin: 20px 12px 12px 12px;
  color: #fff;
  border: 2px solid #fff;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-size: xx-small;
}

.info-text {
  float: left;
  font-weight: lighter;
  width: 300px;
}

.info-image-gallery {
  float: right;
}

.gallery-images {
  width: 400px;
}

.gallery-info {
  width: 270px;
}

.info-box {
  background-color: $primary-color;
  display: block;
  padding: 12px;
  color: white;
  overflow: hidden;
  margin-bottom: 24px;
}

.title {
  letter-spacing: $title-letter-spacing;
  font-weight: lighter;
}

.nav {
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: absolute;
  z-index: 2;
  top: 37px;
  right: 37px;
  height: 11px;
  font-size: 77%;
  > li {
    display: inline;
    margin-right: 22px;
    > a {
      text-decoration: none;
      color: $primary-color;
      &:hover {
        color: white;
      }
    }
  }
}

.img-responsive {
	display: block;
	max-width: 100%;
}


@media screen and (max-width: 1130px) {
  #content {
    top: 1062px;
  }

  #listings-content {
    margin-top: -300px;
  }

  .nav {
    > li {
      display: block;
    }
  }

  #listings-sidebar {
    width: 90%;
  }

  #listings-info {
    width: 90%;
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

